--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,16 @@ env:
   RESOURCE_GROUP2: "rg-vFunction-q32s"
   CLUSTER_NAME: "aks-vFunction"
   #DEPLOYMENT_MANIFEST_PATH: "spec"
-
+  
 jobs:
-  # buildImage:
-   # permissions:
-    #  contents: read
-     # id-token: write
-   # runs-on: ubuntu-latest
-   # steps:
+  buildImage:
+    permissions:
+      contents: read
+      id-token: write
+    runs-on: ubuntu-latest
+    steps:
       # Checks out the repository this file is in
-    #  - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       # Logs in with your Azure credentials
       - name: Azure login
@@ -35,7 +35,16 @@ jobs:
       #  run: |
       #    az acr build --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
 
-
+  deploy:
+    permissions:
+      actions: read
+      contents: read
+      id-token: write
+    runs-on: ubuntu-latest
+    #needs: [buildImage]
+    steps:
+      # Checks out the repository this file is in
+      - uses: actions/checkout@v3
 
       # Logs in with your Azure credentials
       - name: Azure login
