--- a/menifests.yaml
+++ b/menifests.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: oms-deployment-via-cicd
+  name: oms-inv-deployment
   labels:
-    app: oms-deployment-via-cicd
+    app: oms-inv-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: omscicd
+      app: oms-inv-deployment
   template:
     metadata:
       labels:
-        app: omscicd
+        app: oms-inv-deployment
     spec:
       containers:
-      - name: omscicd
+      - name: oms-inv-deployment
         image: azcrvfunctionpov.azurecr.io/oms-inv:latest
         ports:
         - containerPort: 8081
