--- a/menifests2.yaml
+++ b/menifests2.yaml
@@ -19,3 +19,15 @@ spec:
         image: azcrvfunctionpov.azurecr.io/oms-product:latest
         ports:
         - containerPort: 80
+        
+apiVersion: v1
+kind: Service
+metadata:
+  name: product-service
+spec:
+  selector:
+    app: product-inv-deployment
+  ports:
+    - port: 8765
+      targetPort: 9376
+  type: LoadBalancer
