--- a/menifests2.yaml
+++ b/menifests2.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: oms-product-deployment
-  labels:
-    app: oms-product-deployment
 spec:
   replicas: 2
   selector:
@@ -17,17 +15,24 @@ spec:
       containers:
       - name: oms-product-deployment
         image: azcrvfunctionpov.azurecr.io/oms-product:latest
-        ports:
-        - containerPort: 80
----        
+        env:
+        - name: DATABASE_HOST
+          value: "mysqlvfunction-q32s.mysql.database.azure.com"
+        - name: DATABASE_USERNAME
+          value: "workshop"
+        - name: DATABASE_PASSWORD
+          value: "vFunction@2021!"
+        - name: DATABASE_NAME    
+          value: "demo"     
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: product-service
+  name: oms-product-deployment
 spec:
-  selector:
-    app: product-inv-deployment
-  ports:
-    - port: 8765
-      targetPort: 9376
   type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: oms-product-deployment
