--- a/menifests.yaml
+++ b/menifests.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: oms-inv-deployment
+  labels:
+    app: oms-inv-deployment
 spec:
   replicas: 2
   selector:
@@ -15,24 +17,17 @@ spec:
       containers:
       - name: oms-inv-deployment
         image: azcrvfunctionpov.azurecr.io/oms-inv:latest
-        env:
-        - name: DATABASE_HOST
-          value: "mysqlvfunction-q32s.mysql.database.azure.com"
-        - name: DATABASE_USERNAME
-          value: "workshop"
-        - name: DATABASE_PASSWORD
-          value: "vFunction@2021!"
-        - name: DATABASE_NAME    
-          value: "demo"     
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: oms-inv-deployment
+  name: inv-service
 spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 8080
   selector:
     app: oms-inv-deployment
+  ports:
+    - port: 8080
+      targetPort: 8081
+  type: LoadBalancer
